# force_me_to_learn_cpp

./: .gitignore  README.md  build.cmd  run.cmd
src/: CMakeLists.txt  CSVUtils.cpp  CSVUtils.h  DataLoader.cpp  DataLoader.h  Result.h  Translation.h  data.csv  main.cpp
